G'MIC: fix layer positioning and bounding

Since this is a bug in *both* sides of the comms, we also need a G'MIC
update.

BUG: 452831

CCBUG: 452155